<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/courseNameLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/class_name_label"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/classNameEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/courseCodeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/class_code_label"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/classCodeEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/courseSectionLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/class_section_label"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/classSectionEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/schoolTermLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/class_schoolterm_label"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/classTermEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/schoolYearLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/class_schoolyear_label"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/classSchoolYearEditText"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/classNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/classCodeEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classNameEditText" />

    <EditText
        android:id="@+id/classSectionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classCodeEditText" />

    <EditText
        android:id="@+id/classTermEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classSectionEditText" />

    <EditText
        android:id="@+id/classSchoolYearEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classTermEditText" />
</android.support.constraint.ConstraintLayout>